<resources>
    <string name="app_name">GEOTracker</string>
    <string name="activity_title_geotracker">GEO Tracker</string>
    <string name="activity_title_trips">Trips</string>
    <string name="activity_title_track">Track</string>
    <string name="activity_title_maps">Maps</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_about">About</string>
    <string name="fragment_title_trip_list">Trips</string>
    <string name="fragment_title_trip_detail">Trip Details</string>
    <string name="fragment_title_activity_type_list">Activities</string>
    <string name="fragment_title_activity_type_detail">Activity Details</string>
    <string name="fragment_title_route_list">Routes</string>
    <string name="fragment_title_route_detail">Route Details</string>
    <string name="fragment_title_about">About GEOTracker</string>
    <string name="fragment_title_tracking">Tracking</string>
    <string name="fragment_title_maps">Maps</string>
    <string name="fragment_title_track">Tracking</string>
    <string name="dialog_title_activity_type_new">New Activity</string>
    <string name="dialog_message_activity_type_new">Please enter a name and description of your new activity.</string>
    <string name="dialog_title_route_list_filter">Filter Route List</string>
    <string name="dialog_title_route_add">Add Route</string>
    <string name="dialog_message_route_new">Please enter a name and description of your new route.</string>
    <string name="dialog_title_route_edit">Edit Route</string>
    <string name="dialog_title_route_delete">Route Delete</string>
    <string name="dialog_msg_route_delete">Are you sure you want to delete this route?</string>
    <string name="dialog_title_trip_new">New Trip</string>
    <string name="dialog_message_trip_new">Please enter a name and description of your new trip.</string>
    <string name="dialog_title_please_grant_permissions">Please grant these permission(s)</string>
    <string name="dialog_msg_location_permissions_required">Location permissions are required to do the task.</string>
    <string name="dialog_msg_storage_permissions_required">Location permissions are required to do the task.</string>
    <string name="dialog_msg_grant_permissions">GEOTracker requires permissions be granted. Please permit the permission through "
                + "Settings screen.\n\nSelect Permissions -> Enable permission</string>
    <string name="dialog_title_trip_list_filter">Filter Trip List</string>
    <string name="dialog_title_trip_edit">Edit Trip</string>
    <string name="dialog_title_trip_delete">Trip Delete</string>
    <string name="dialog_msg_trip_delete">Are you sure you want to delete this trip?</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="action_trips">Trips</string>
    <string name="action_activity_types">Activities</string>
    <string name="action_routes">Routes</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="navigation_trips">Trips</string>
    <string name="navigation_track">Track</string>
    <string name="navigation_map">Map</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_activity_mgmt">Activity Mgmt</string>
    <string name="menu_route_mgmt">Route Mgmt</string>
    <string name="tab_camera_file_explorer">Snapshots</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_permit_manually">Permit Manually</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_no">No</string>
    <string name="lbl_camera_details">Camera Details</string>
    <string name="check_active">Active</string>
    <string name="check_save_trip_name_to_routes">Save trip name to routes</string>
    <string name="hint_activity_name">Enter name of activity</string>
    <string name="hint_activity_desc">Enter description of activity</string>
    <string name="hint_active">Click to enable</string>
    <string name="hint_trip_name">Enter name of trip</string>
    <string name="hint_trip_desc">Enter description of trip</string>
    <string name="hint_route_name">Enter name of route</string>
    <string name="hint_route_desc">Enter description of route</string>
    <string name="btn_start_tracking">Start Tracking</string>
    <string name="btn_stop_tracking">Stop Tracking</string>
    <string name="btn_pause_tracking">Pause Tracking</string>
    <string name="textTripTitle">Trip Name: </string>
    <string name="textLatitude">Latitude</string>
    <string name="textLongitude">Longitude</string>
    <string name="textLatitudeLongitude"> </string>
    <string name="textElevation">Elevation</string>
    <string name="textBearing">Bearing</string>
    <string name="textSpeed">Speed</string>
    <string name="textAccuracy">Accuracy</string>
    <string name="textCurrentTime">Current Time</string>
    <string name="textStartTime">Start Time</string>
    <string name="textEndTime">End Time</string>
    <string name="textMovingTime">Moving Time</string>
    <string name="textPausedTime">Paused Time</string>
    <string name="textTotalTime">Total Time</string>
    <string name="textBearingUnits">d</string>
    <string name="textElevationUnits_Metric">m</string>
    <string name="textSpeedUnits_Metric">km/hr</string>
    <string name="textAccuracyUnits_Metric">m</string>
    <string name="textElevationUnits_English">ft</string>
    <string name="textSpeedUnits_English">mi/hr</string>
    <string name="textAccuracyUnits_English">ft</string>
    <string name="textSpeedUnits_Nautical">kt</string>
    <string name="textViewActivityType">Activity</string>
    <string name="text_no_trips">No trips found</string>
    <string name="text_add_trips">Click Track to add trip</string>
    <string name="text_no_routes">No routes found</string>
    <string name="text_add_routes">Click + to add route</string>
    <string name="radiogroup_trip_list_filter_active">Trip</string>
    <string name="radiogroup_trip_list_filter_activity_type">Activity</string>
    <string name="radiobutton_trip_list_filter_active_all">All</string>
    <string name="radiobutton_trip_list_filter_active_active">Active</string>
    <string name="radiobutton_trip_list_filter_active_inactive">Inactive</string>
    <string name="radiogroup_route_list_filter_active">Route</string>
    <string name="radiogroup_route_list_filter_activity_type">Activity</string>
    <string name="radiobutton_route_list_filter_active_all">All</string>
    <string name="radiobutton_route_list_filter_active_active">Active</string>
    <string name="radiobutton_route_list_filter_active_inactive">Inactive</string>
    <string name="action_map_types">Set map type</string>
    <string name="action_map_type_normal">Normal</string>
    <string name="action_map_type_hybrid">Hybrid</string>
    <string name="action_map_type_satellite">Satellite</string>
    <string name="action_map_type_terrain">Terrain</string>
    <string name="maps_you_are_here">You are here</string>
    <string name="maps_current_location">You are here</string>
    <string name="maps_destination">Destination</string>
    <string name="action_todo">TODO</string>
    <string name="action_menu_three_dots">"&#8942;"</string>
    <string name="action_trip_delete">Delete trip</string>
    <string name="action_trip_edit">Edit trip</string>
    <string name="action_trip_review">Review trip</string>
    <string name="action_route_delete">Delete route</string>
    <string name="action_route_edit">Edit route</string>
    <string name="action_route_add">Add route</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_apply">Apply Filter</string>
    <string name="action_filter_clear">Clear Filter</string>
    <string name="action_trip_search_hint">Type trip name \u2026</string>
    <string name="notification_gps_service_title">Location Service</string>
    <string name="notification_gps_service_text">Location services have started.</string>
    <string name="notification_tracking_service_title">Tracking Service</string>
    <string name="notification_tracking_service_text">Now recording a new track.</string>
    <string name="permissions_go_to_settings_button">Go to Settings.</string>
    <string name="permissions_go_to_settings_msg">You have denied some permissions.  Allow all permissions at {[Setting] -> [Permissions]</string>
    <string name="permissions_required">This app needs Location and Storage permissions.</string>
    <string name="permissions_button_yes">Yes, Grant Permissions</string>
    <string name="permissions_button_no">No, Exit app</string>
    <string name="pref_category_units">Units</string>
    <string name="pref_category_network_settings">Network Settings</string>
    <string name="pref_category_location_services">Location Services</string>
    <string name="pref_category_power_savings">Power Savings</string>
    <string name="pref_category_misc_settings">Misc</string>
    <string name="pref_title_activity_settings">Settings</string>
    <string name="pref_title_units_metric">Metric</string>
    <string name="pref_title_units_nautical">Nautical</string>
    <string name="pref_title_units_coordinate_type">Coordinate Type</string>
    <string name="pref_title_units_coordinate_datum">Coordinate Datum</string>
    <string name="pref_title_location_services_update_interval">Update Interval (in seconds)</string>
    <string name="pref_title_location_services_update_distance">Update Distance (in meters)</string>
    <string name="pref_title_power_savings_keep_screen_on">Keep Screen On</string>
    <string name="pref_default_camera_name">Front</string>
    <string name="msg_application_starting">Application starting \u2026</string>
    <string name="msg_creating_db_tables">Creating database tables.</string>
    <string name="msg_has_location_permissions">Has Location permissions.</string>
    <string name="msg_no_location_permissions">No Location permissions.</string>
    <string name="msg_location_permissions_already_granted">Location permissions have already been granted.</string>
    <string name="msg_has_storage_permissions">Has Storage permissions.</string>
    <string name="msg_no_storage_permissions">No Storage permissions.</string>
    <string name="msg_storage_permissions_already_granted">Storage permissions have already been granted.</string>
    <string name="msg_gps_service_starting">GPS service is starting.</string>
    <string name="msg_gps_service_restart">GPS restart.</string>
    <string name="msg_gps_service_stop">GPS service stopped.</string>
    <string name="msg_gps_requesting_updates">GPS service requesting updates.</string>
    <string name="msg_tracking_service_starting">Tracking service is starting.</string>
    <string name="msg_tracking_service_restart">Tracking restart.</string>
    <string name="msg_tracking_service_stop">Tracking service stopped.</string>
    <string name="msg_tracking_requesting_updates">Tracking service requesting updates.</string>
    <string name="msg_trip_inserted">Trip inserted.</string>
    <string name="msg_trip_update">Trip updated.</string>
    <string name="msg_trip_delete">Trip deleted.</string>
    <string name="msg_trip_details_insert">Trip Details inserted. Trip Details ID: \u0020</string>
    <string name="msg_trip_details_insert_error">Error inserting trip details.</string>
    <string name="msg_trip_not_found">No active trip found in shared preferences.</string>
    <string name="msg_route_inserted">Route inserted.</string>
    <string name="msg_route_update">Route updated.</string>
    <string name="msg_route_delete">Route deleted.</string>
</resources>