<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/map_types"
        android:title="@string/action_map_types">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_map_type_normal"
                    android:title="@string/action_map_type_normal" />
                <item android:id="@+id/action_map_type_hybrid"
                    android:title="@string/action_map_type_hybrid" />
                <item android:id="@+id/action_map_type_satellite"
                    android:title="@string/action_map_type_satellite" />
                <item android:id="@+id/action_map_type_terrain"
                    android:title="@string/action_map_type_terrain" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/map_todo"
        android:title="@string/action_todo">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_map_type_normal_xxx"
                    android:title="@string/action_map_type_normal" />
                <item android:id="@+id/action_map_type_hybrid_xxx"
                    android:title="@string/action_map_type_hybrid" />
            </group>
        </menu>
    </item>

</menu>