<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_activities"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/fragment_title_activity_type_list" />
        <item
            android:id="@+id/drawer_routes"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/fragment_title_route_list" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/activity_title_settings" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/activity_title_about" />
    </group>

</menu>