<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop = "18dp"
    android:minWidth="300dp"
    android:minHeight="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "16dp"
        android:layout_marginStart = "8dp"
        android:layout_marginEnd = "8dp"
        android:labelFor="@+id/autoCompleteTextView"
        android:text="@string/hint_trip_name" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "8dp"
        android:layout_marginStart = "8dp"
        android:layout_marginEnd = "8dp"
        app:hintTextAppearance="@android:style/TextAppearance.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_trip_desc"
            android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
            android:minLines="4"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBoxActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/check_active"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/checkBoxSaveTripNameToRoutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/check_save_trip_name_to_routes"
            android:checked="false"/>

    </LinearLayout>

    <!-- Save/Cancel/Delete buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|end"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" >

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonPrefCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonPrefSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/ButtonPrefSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>