<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:minWidth="300dp"
        android:minHeight="500dp" >

        <TextView
            android:id="@+id/textViewActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="36dp"
            android:text="@string/radiogroup_trip_list_filter_active"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp" >

            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_trip_list_filter_active_all" />

            <RadioButton
                android:id="@+id/radioButtonActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_trip_list_filter_active_active" />

            <RadioButton
                android:id="@+id/radioButtonInactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_trip_list_filter_active_inactive" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewActivityType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="18dp"
                android:text="@string/textViewActivityType"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Save/Cancel/Delete buttons -->
        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" >

            <Button
                android:id="@+id/btn_cancel"
                style="@style/ButtonPrefCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/ButtonPrefSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ok" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>